  (Xavier Leroy)

- MPR#7668: -principal is broken with polymorphic variants
  (Jacques Garrigue, report by Jun Furuse)

4.06 maintenance branch
-----------------------

### Bug fixes

- MPR#7661, GPR#1459: fix faulty compilation of patterns
  using extensible variants constructors
  (Luc Maranget, review by Thomas Refis and Gabriel Scherer, report
  by Abdelraouf Ouadjaout and Thibault Suzanne)

OCaml 4.06.0 (3 Nov 2017):
--------------------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- MPR#6271, MPR#7529, GPR#1249: Support "let open M in ..."
  in class expressions and class type expressions.
  (Alain Frisch, reviews by Thomas Refis and Jacques Garrigue)

- GPR#792: fix limitations of destructive substitutions, by
  allowing "S with type t := type-expr",
  "S with type M.t := type-expr", "S with module M.N := path"
  (Valentin Gatien-Baron, review by Jacques Garrigue and Leo White)

* GPR#1064, GPR#1392: extended indexing operators, add a new class of
  user-defined indexing operators, obtained by adding at least
  one operator character after the dot symbol to the standard indexing
  operators: e,g ".%()", ".?[]", ".@{}<-":
    let ( .%() ) = List.nth in [0; 1; 2].%(1)
  After this change, functions or methods with an explicit polymorphic type
  annotation and of which the first argument is optional now requires a space
  between the dot and the question mark,
  e.g. "<f:'a.?opt:int->unit>" must now be written "<f:'a. ?opt:int->unit>".
  (Florian Angeletti, review by Damien Doligez and Gabriel Radanne)

- GPR#1118: Support inherited field in object type expression
    type t = < m : int >
    type u = < n : int; t; k : int >
  (Runhang Li, review by Jeremy Yallop, Leo White, Jacques Garrigue,
   and Florian Angeletti)

* GPR#1232: Support Unicode character escape sequences in string
  literals via the \u{X+} syntax. These escapes are substituted by the
  UTF-8 encoding of the Unicode character.