@@ -80,6 +80,9 @@ Working version
   (Luc Maranget, review by Thomas Refis and Gabriel Scherer, report
   by Abdelraouf Ouadjaout and Thibault Suzanne)
 
+- GPR#1470: Don't commute negation with float comparison
+  (Leo White, review by Xavier Leroy)
+
 OCaml 4.06.0 (3 Nov 2017):
 --------------------------
 
